added a little css

--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 h1 {
-    color: green
+    color: green;
+    /* font-size: 20px;
+    text-align: center;
+    background-color: black; */
 }
 
 /* Resource for CSS styling basics: https://www.w3schools.com/css/css_intro.asp */
