--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ h1 {
     /* font-size: 20px;
     text-align: center;
     background-color: black; */
+    font-family: 'Montseratt';
 }
 
 /* Resource for CSS styling basics: https://www.w3schools.com/css/css_intro.asp */
